Updated main notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +331,330 @@
     "    merged = pd.concat([merged, df], ignore_index=True)\n",
     "\n",
     "merged.to_csv('C:\\\\Users\\\\nephr\\\\Desktop\\\\Uni Nuova\\\\ADM_HW3\\\\df_DEFINITIVO.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's print the first rows of the merged dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>courseName</th>\n",
+       "      <th>universityName</th>\n",
+       "      <th>facultyName</th>\n",
+       "      <th>isItFullTime</th>\n",
+       "      <th>courseDescription</th>\n",
+       "      <th>startDate</th>\n",
+       "      <th>fees</th>\n",
+       "      <th>modality</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>administration</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3D Design for Virtual Environments - MSc</td>\n",
+       "      <td>Glasgow Caledonian University</td>\n",
+       "      <td>School of Engineering and Built Environment</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>3D visualisation and animation play a role in ...</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full-time</td>\n",
+       "      <td>Glasgow</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air Quality Solutions - MSc</td>\n",
+       "      <td>University of Leeds</td>\n",
+       "      <td>Institute for Transport Studies</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>Up to 7 million people are estimated to die ev...</td>\n",
+       "      <td>September</td>\n",
+       "      <td>UK: £12,500 (Total)International: £28,750 (Total)</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full time, 2 or 3 years part-time</td>\n",
+       "      <td>Leeds</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Engineering Management - MSc/PGCert</td>\n",
+       "      <td>University of Leeds</td>\n",
+       "      <td>Leeds Online</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>Designed by engineers, for engineers, the onli...</td>\n",
+       "      <td>September, November</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>PGCert</td>\n",
+       "      <td>8-24 months online</td>\n",
+       "      <td>Leeds</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American History (MSc)</td>\n",
+       "      <td>University of Edinburgh</td>\n",
+       "      <td>School of History, Classics &amp; Archaeology</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>This programme allows you to explore American ...</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Tuition fees vary between degree programmes. F...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full-time or 2 years part-time</td>\n",
+       "      <td>Edinburgh</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amputation and Prosthetic Rehabilitation MSc</td>\n",
+       "      <td>University of Southampton</td>\n",
+       "      <td>Faculty of Environmental and Life Sciences</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>Enhance your practice at a global top 100* uni...</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 Year Full Time / 2-4 Years Part Time</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Anaesthesia and Perioperative Science MSc</td>\n",
+       "      <td>University College London</td>\n",
+       "      <td>Division of Surgery and Interventional Science</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>The MSc Anaesthesia and Perioperative Science ...</td>\n",
+       "      <td>March, September</td>\n",
+       "      <td>Part time - £7,050</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>2 years part time</td>\n",
+       "      <td>London</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Analogue and Digital Integrated Circuit Design...</td>\n",
+       "      <td>Imperial College London</td>\n",
+       "      <td>Electrical and Electronic Engineering</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>Our MSc in Analogue and Digital Integrated Cir...</td>\n",
+       "      <td>October</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full-time</td>\n",
+       "      <td>London</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Analytical Bioscience (MSc/PGDip)</td>\n",
+       "      <td>Birkbeck, University of London</td>\n",
+       "      <td>School of Natural Sciences</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>Our analytical bioscience postgraduate course ...</td>\n",
+       "      <td>October, January</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full-time or 2 years part-time</td>\n",
+       "      <td>London</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Analytical Chemistry (MSc)</td>\n",
+       "      <td>Kingston University</td>\n",
+       "      <td>Faculty of Health, Science, Social Care and Ed...</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>You will study good measurement and scientific...</td>\n",
+       "      <td>September, January</td>\n",
+       "      <td>Please see the university website for further ...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full time, 2 years full time including ...</td>\n",
+       "      <td>London</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Analytical Chemistry (MSc)</td>\n",
+       "      <td>Sheffield Hallam University</td>\n",
+       "      <td>Postgraduate Courses</td>\n",
+       "      <td>Full time</td>\n",
+       "      <td>Apply for the part-time course here. Work in c...</td>\n",
+       "      <td>September</td>\n",
+       "      <td>Our tuition fee for UK students starting full-...</td>\n",
+       "      <td>MSc</td>\n",
+       "      <td>1 year full-time, 2 years part-time</td>\n",
+       "      <td>Sheffield</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>On Campus</td>\n",
+       "      <td>https://www.findamasters.com/masters-degrees/c...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          courseName  \\\n",
+       "0           3D Design for Virtual Environments - MSc   \n",
+       "1                        Air Quality Solutions - MSc   \n",
+       "2                Engineering Management - MSc/PGCert   \n",
+       "3                             American History (MSc)   \n",
+       "4       Amputation and Prosthetic Rehabilitation MSc   \n",
+       "5          Anaesthesia and Perioperative Science MSc   \n",
+       "6  Analogue and Digital Integrated Circuit Design...   \n",
+       "7                  Analytical Bioscience (MSc/PGDip)   \n",
+       "8                         Analytical Chemistry (MSc)   \n",
+       "9                         Analytical Chemistry (MSc)   \n",
+       "\n",
+       "                   universityName  \\\n",
+       "0   Glasgow Caledonian University   \n",
+       "1             University of Leeds   \n",
+       "2             University of Leeds   \n",
+       "3         University of Edinburgh   \n",
+       "4       University of Southampton   \n",
+       "5       University College London   \n",
+       "6         Imperial College London   \n",
+       "7  Birkbeck, University of London   \n",
+       "8             Kingston University   \n",
+       "9     Sheffield Hallam University   \n",
+       "\n",
+       "                                         facultyName isItFullTime  \\\n",
+       "0        School of Engineering and Built Environment    Full time   \n",
+       "1                    Institute for Transport Studies    Full time   \n",
+       "2                                       Leeds Online    Part time   \n",
+       "3          School of History, Classics & Archaeology    Full time   \n",
+       "4         Faculty of Environmental and Life Sciences    Full time   \n",
+       "5     Division of Surgery and Interventional Science    Part time   \n",
+       "6              Electrical and Electronic Engineering    Full time   \n",
+       "7                         School of Natural Sciences    Full time   \n",
+       "8  Faculty of Health, Science, Social Care and Ed...    Full time   \n",
+       "9                               Postgraduate Courses    Full time   \n",
+       "\n",
+       "                                   courseDescription            startDate  \\\n",
+       "0  3D visualisation and animation play a role in ...            September   \n",
+       "1  Up to 7 million people are estimated to die ev...            September   \n",
+       "2  Designed by engineers, for engineers, the onli...  September, November   \n",
+       "3  This programme allows you to explore American ...            September   \n",
+       "4  Enhance your practice at a global top 100* uni...            September   \n",
+       "5  The MSc Anaesthesia and Perioperative Science ...     March, September   \n",
+       "6  Our MSc in Analogue and Digital Integrated Cir...              October   \n",
+       "7  Our analytical bioscience postgraduate course ...     October, January   \n",
+       "8  You will study good measurement and scientific...   September, January   \n",
+       "9  Apply for the part-time course here. Work in c...            September   \n",
+       "\n",
+       "                                                fees modality  \\\n",
+       "0  Please see the university website for further ...      MSc   \n",
+       "1  UK: £12,500 (Total)International: £28,750 (Total)      MSc   \n",
+       "2  Please see the university website for further ...   PGCert   \n",
+       "3  Tuition fees vary between degree programmes. F...      MSc   \n",
+       "4  Please see the university website for further ...      MSc   \n",
+       "5                                 Part time - £7,050      MSc   \n",
+       "6  Please see the university website for further ...      MSc   \n",
+       "7  Please see the university website for further ...      MSc   \n",
+       "8  Please see the university website for further ...      MSc   \n",
+       "9  Our tuition fee for UK students starting full-...      MSc   \n",
+       "\n",
+       "                                            duration         city  \\\n",
+       "0                                   1 year full-time      Glasgow   \n",
+       "1           1 year full time, 2 or 3 years part-time        Leeds   \n",
+       "2                                 8-24 months online        Leeds   \n",
+       "3              1 year full-time or 2 years part-time    Edinburgh   \n",
+       "4             1 Year Full Time / 2-4 Years Part Time  Southampton   \n",
+       "5                                  2 years part time       London   \n",
+       "6                                   1 year full-time       London   \n",
+       "7              1 year full-time or 2 years part-time       London   \n",
+       "8  1 year full time, 2 years full time including ...       London   \n",
+       "9                1 year full-time, 2 years part-time    Sheffield   \n",
+       "\n",
+       "          country administration  \\\n",
+       "0  United Kingdom      On Campus   \n",
+       "1  United Kingdom      On Campus   \n",
+       "2  United Kingdom         Online   \n",
+       "3  United Kingdom      On Campus   \n",
+       "4  United Kingdom      On Campus   \n",
+       "5  United Kingdom      On Campus   \n",
+       "6  United Kingdom      On Campus   \n",
+       "7  United Kingdom      On Campus   \n",
+       "8  United Kingdom      On Campus   \n",
+       "9  United Kingdom      On Campus   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://www.findamasters.com/masters-degrees/c...  \n",
+       "1  https://www.findamasters.com/masters-degrees/c...  \n",
+       "2  https://www.findamasters.com/masters-degrees/c...  \n",
+       "3  https://www.findamasters.com/masters-degrees/c...  \n",
+       "4  https://www.findamasters.com/masters-degrees/c...  \n",
+       "5  https://www.findamasters.com/masters-degrees/c...  \n",
+       "6  https://www.findamasters.com/masters-degrees/c...  \n",
+       "7  https://www.findamasters.com/masters-degrees/c...  \n",
+       "8  https://www.findamasters.com/masters-degrees/c...  \n",
+       "9  https://www.findamasters.com/masters-degrees/c...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loading the Dataframe\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\nephr\\\\Desktop\\\\Uni Nuova\\\\ADM_HW3\\\\df_DEFINITIVO.tsv\", sep='\\t')\n",
+    "\n",
+    "# And printing its first 10 rows\n",
+    "df.head(10)"
    ]
   },
   {
@@ -1143,7 +1467,7 @@
    "source": [
     "#### This code will perform the following operations:\n",
     "\n",
-    "1. Tokenization: It separates the text of each course description into words. The resulting words are stored in a list of lists called tokenized_descriptions.\n",
+    "**1. Tokenization:** It separates the text of each course description into words. The resulting words are stored in a list of lists called tokenized_descriptions.\n",
     "\n",
     "**2. Vocabulary Creation:** It creates a vocabulary that maps each unique word in the corpus of course descriptions to a unique integer (term_id). The vocabulary is a dictionary, where that maps each word to a term_id. This dictionary was saved to a file named 'vocabulary_.pkl' using the pickle module in order to keep it ready for our purposes.\n",
     "\n",
